--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <group android:checkableBehavior="single">
+    <group
+        android:id="@+id/nav_group_messaging"
+        android:checkableBehavior="single">
         <item
             android:id="@+id/nav_global_chat"
             android:icon="@drawable/ic_message_text"
@@ -9,28 +11,26 @@
         <item
             android:id="@+id/nav_peers"
             android:icon="@drawable/ic_account_multiple"
-            android:title="@string/nav_menu_peers" />
+            android:title="@string/nav_menu_peoples" />
         <item
             android:id="@+id/nav_rooms"
             android:icon="@drawable/ic_border_all"
             android:title="@string/nav_menu_rooms" />
+    </group>
+
+    <group
+        android:id="@+id/nav_group_other"
+        android:checkableBehavior="none">
         <item
             android:id="@+id/nav_settings"
             android:icon="@drawable/ic_settings"
             android:title="@string/nav_menu_settings" />
+        <item
+            android:id="@+id/nav_exit"
+            android:icon="@drawable/ic_exit_to_app"
+            android:title="@string/nav_menu_exit" />
     </group>
 
-    <!--<item android:title="Communicate">-->
-        <!--<menu>-->
-            <!--<item-->
-                <!--android:id="@+id/nav_share"-->
-                <!--android:icon="@drawable/ic_menu_share"-->
-                <!--android:title="Share" />-->
-            <!--<item-->
-                <!--android:id="@+id/nav_send"-->
-                <!--android:icon="@drawable/ic_menu_send"-->
-                <!--android:title="Send" />-->
-        <!--</menu>-->
-    <!--</item>-->
+
 
 </menu>
