--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -7,15 +7,15 @@
         <item
             android:id="@+id/nav_global_chat"
             android:icon="@drawable/ic_message_text"
-            android:title="@string/nav_menu_global_chat" />
+            android:title="@string/global_chat" />
         <item
-            android:id="@+id/nav_peers"
+            android:id="@+id/nav_peoples"
             android:icon="@drawable/ic_account_multiple"
-            android:title="@string/nav_menu_peoples" />
+            android:title="@string/peoples" />
         <item
             android:id="@+id/nav_rooms"
             android:icon="@drawable/ic_border_all"
-            android:title="@string/nav_menu_rooms" />
+            android:title="@string/rooms" />
     </group>
 
     <group
@@ -24,11 +24,11 @@
         <item
             android:id="@+id/nav_settings"
             android:icon="@drawable/ic_settings"
-            android:title="@string/nav_menu_settings" />
+            android:title="@string/settings" />
         <item
             android:id="@+id/nav_exit"
             android:icon="@drawable/ic_exit_to_app"
-            android:title="@string/nav_menu_exit" />
+            android:title="@string/exit" />
     </group>
 
 
