--- a/app/src/main/res/layout/chat_layout.xml
+++ b/app/src/main/res/layout/chat_layout.xml
@@ -9,8 +9,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".activity.MainActivity"
-    tools:showIn="@layout/app_bar_main">
+    tools:context=".activity.MainActivity">
 
     <EditText
         android:layout_width="wrap_content"
@@ -39,7 +38,9 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_above="@+id/editTextMessage"
-        android:layout_below="@+id/textViewDebug" />
+        android:layout_below="@+id/textViewDebug"
+        android:transcriptMode="alwaysScroll"
+        android:stackFromBottom="true"/>
 
     <TextView
         android:layout_width="wrap_content"
