--- a/app/src/main/res/layout/peoples_list_layout.xml
+++ b/app/src/main/res/layout/peoples_list_layout.xml
@@ -14,5 +14,5 @@
     <ListView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/listView3" />
+        android:id="@+id/listViewPeoples" />
 </RelativeLayout>
