--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -14,30 +14,30 @@
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/editTextMessage"
+        android:id="@+id/frChatMessageText"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:hint="@string/edit_text_message_typehere"
-        android:layout_toLeftOf="@+id/buttonSend"
-        android:layout_toStartOf="@+id/buttonSend" />
+        android:layout_toLeftOf="@+id/frChatSendButton"
+        android:layout_toStartOf="@+id/frChatSendButton" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/button_send"
-        android:id="@+id/buttonSend"
-        android:layout_alignTop="@+id/editTextMessage"
+        android:id="@+id/frChatSendButton"
+        android:layout_alignTop="@+id/frChatMessageText"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
 
     <ListView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/listViewMessages"
+        android:id="@+id/frChatMessageList"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_above="@+id/editTextMessage"
+        android:layout_above="@+id/frChatMessageText"
         android:transcriptMode="alwaysScroll"
         android:stackFromBottom="true"/>
 
