--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -2,31 +2,31 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <group
-        android:id="@+id/nav_group_messaging"
+        android:id="@+id/drawerMenuMessagingGroup"
         android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_global_chat"
+            android:id="@+id/drawerMenuGlobalChat"
             android:icon="@drawable/ic_message_text"
             android:title="@string/global_chat" />
         <item
-            android:id="@+id/nav_peoples"
+            android:id="@+id/drawerMenuPeoples"
             android:icon="@drawable/ic_account_multiple"
             android:title="@string/peoples" />
         <item
-            android:id="@+id/nav_rooms"
+            android:id="@+id/drawerMenuRooms"
             android:icon="@drawable/ic_border_all"
             android:title="@string/rooms" />
     </group>
 
     <group
-        android:id="@+id/nav_group_other"
+        android:id="@+id/drawerMenuOtherGroup"
         android:checkableBehavior="none">
         <item
-            android:id="@+id/nav_settings"
+            android:id="@+id/drawerMenuSettings"
             android:icon="@drawable/ic_settings"
             android:title="@string/settings" />
         <item
-            android:id="@+id/nav_exit"
+            android:id="@+id/drawerMenuExit"
             android:icon="@drawable/ic_exit_to_app"
             android:title="@string/exit" />
     </group>
