--- a/app/src/main/res/layout/listview_people.xml
+++ b/app/src/main/res/layout/listview_people.xml
@@ -9,17 +9,17 @@
         android:id="@+id/listviewPeoplesPicture"
         android:layout_marginTop="4pt"
         android:layout_marginBottom="4pt"
+        android:layout_marginStart="4pt"
+        android:layout_marginEnd="8pt"
         android:layout_marginLeft="4pt"
         android:layout_marginRight="8pt"
         android:background="#000000" />
 
-
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Name"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:id="@+id/listviewPeoplesName"
+        android:id="@+id/listviewPeopleName"
         android:layout_marginTop="26dp"
         android:textColor="#000000" />
 
