--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -6,7 +6,9 @@
     android:gravity="bottom"
     android:orientation="vertical"
     android:paddingBottom="@dimen/navigation_view_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingStart="@dimen/navigation_horizontal_margin"
+    android:paddingEnd="@dimen/activity_horizontal_margin"
+    android:paddingLeft="@dimen/navigation_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/navigation_view_vertical_margin"
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
