--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -11,4 +11,7 @@
     <!-- My custom screen margins -->
     <dimen name="activity_horizontal_margin">4dp</dimen>
     <dimen name="activity_vertical_margin">4dp</dimen>
+
+    <dimen name="navigation_horizontal_margin">8dp</dimen>
+    <dimen name="navigation_vertical_margin">8dp</dimen>
 </resources>
