--- a/app/src/main/res/layout/fragment_rooms.xml
+++ b/app/src/main/res/layout/fragment_rooms.xml
@@ -24,6 +24,6 @@
         android:layout_alignParentBottom="true"
         android:layout_alignRight="@+id/frList"
         android:layout_alignEnd="@+id/frList"
-        android:layout_margin="10dp" />
+        android:layout_margin="@dimen/fab_margin" />
 
 </RelativeLayout>
