--- a/app/src/main/res/layout/activity_room_creating.xml
+++ b/app/src/main/res/layout/activity_room_creating.xml
@@ -54,18 +54,14 @@
             android:text="@string/_private"
             android:id="@+id/isPrivate"
             android:layout_below="@+id/roomNameTextLayout"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
+            android:layout_alignParentStart="true"
+            android:layout_alignEnd="@+id/roomNameTextLayout" />
 
-        <Button
+        <ListView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/create_room"
-            android:id="@+id/createButton"
+            android:id="@+id/listViewPeople"
             android:layout_below="@+id/isPrivate"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_alignRight="@+id/roomNameTextLayout"
-            android:layout_alignEnd="@+id/roomNameTextLayout" />
+            android:layout_alignParentStart="true" />
     </RelativeLayout>
 </android.support.design.widget.CoordinatorLayout>
