--- a/app/src/main/res/layout/listview_people_check.xml
+++ b/app/src/main/res/layout/listview_people_check.xml
@@ -36,6 +36,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:focusable="false"
+        android:clickable="false"
         android:id="@+id/isParticipant"
         android:layout_alignParentEnd="true"
         android:layout_alignBaseline="@+id/listviewPeoplesPicture"
