--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,6 +19,7 @@
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
+        android:background="@color/whiteBackground"
         app:headerLayout="@layout/nav_header_main"
         app:menu="@menu/menu_drawer" />
 
