--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -7,30 +7,51 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".MainActivity">
 
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/frChatMessageText"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true"
-        android:hint="@string/edit_text_message_typehere"
-        android:layout_toStartOf="@+id/frChatSendButton" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/button_send"
-        android:id="@+id/frChatSendButton"
-        android:layout_alignTop="@+id/frChatMessageText"
-        android:layout_alignParentEnd="true" />
-
     <ListView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/frChatMessageList"
         android:layout_alignParentStart="true"
-        android:layout_above="@+id/frChatMessageText"
         android:transcriptMode="alwaysScroll"
-        android:stackFromBottom="true"/>
+        android:stackFromBottom="true"
+        android:layout_above="@+id/linearLayout"
+        android:dividerHeight="0dp"
+        android:divider="@null" />
 
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:background="@color/whiteBackground"
+        android:id="@+id/linearLayout"
+        android:paddingStart="4dp"
+        android:paddingTop="4dp"
+        android:paddingBottom="2dp"
+        android:paddingEnd="8dp">
+
+        <EditText
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/frChatMessageText"
+            android:hint="@string/edit_text_message_typehere"
+            android:layout_weight="1" />
+
+        <ImageButton
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:id="@+id/frChatSendButton"
+            android:contentDescription="@string/button_send"
+            android:background="@drawable/ic_send"
+            android:layout_marginTop="4dp"
+            android:layout_marginStart="4dp" />
+
+        <!--<Button-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:text="@string/button_send"-->
+            <!--android:id="@+id/frChatSendButton"/>-->
+    </LinearLayout>
 </RelativeLayout>
