--- a/app/src/main/res/menu/menu_done.xml
+++ b/app/src/main/res/menu/menu_done.xml
@@ -14,6 +14,7 @@
     <item android:id="@+id/action_menu_undone"
         android:title=""
         android:orderInCategory="100"
+        android:enabled="false"
         android:icon="@drawable/ic_undone"
         app:showAsAction="ifRoom"
         />
