--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#673ab7</color>
-    <color name="colorPrimaryDark">#5e35b1</color>
-    <color name="colorAccent">#ffca28</color>
+    <color name="primary">#673ab7</color>
+    <color name="primaryDark">#512da8</color>
+    <color name="primaryLight">#ede7f6</color>
+    <color name="accent">#ffc400</color>
+    <color name="whiteBackground">#fafafa</color>
+    <color name="purple400">#7e57c2</color>
+    <color name="purple100">#d1c4e9</color>
 </resources>
