--- a/app/src/main/res/layout/listview_chat.xml
+++ b/app/src/main/res/layout/listview_chat.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/bubble_layout_parent"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -14,7 +15,8 @@
         android:layout_height="wrap_content"
         android:background="@drawable/ic_outcoming"
         android:orientation="vertical"
-        android:padding="4dp">
+        android:padding="4dp"
+        tools:ignore="UselessParent">
 
         <TextView
             android:layout_width="wrap_content"
