--- a/app/src/main/res/layout/fragment_rooms.xml
+++ b/app/src/main/res/layout/fragment_rooms.xml
@@ -14,15 +14,15 @@
     <ListView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/frList" />
+        android:id="@+id/listViewRooms" />
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/frFab"
+        android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/ic_plus"
         android:layout_alignParentBottom="true"
-        android:layout_alignEnd="@+id/frList"
+        android:layout_alignEnd="@+id/listViewRooms"
         android:layout_margin="@dimen/fab_margin" />
 
 </RelativeLayout>
