--- a/app/src/main/res/layout/listview_people.xml
+++ b/app/src/main/res/layout/listview_people.xml
@@ -9,7 +9,7 @@
     <ImageView
         android:layout_width="64dp"
         android:layout_height="64dp"
-        android:id="@+id/listviewPeoplesPicture"
+        android:id="@+id/ImageViewPicture"
         android:layout_marginTop="4pt"
         android:layout_marginBottom="4pt"
         android:layout_marginStart="4pt"
@@ -18,16 +18,13 @@
         android:contentDescription="@string/profile_picture"/>
 
     <TextView
-        tools:ignore="HardcodedText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:id="@+id/listviewPeopleName"
+        android:id="@+id/textViewName"
         android:textColor="#000000"
-        android:text="Sample Text"
-        android:layout_alignTop="@+id/listviewPeoplesPicture"
-        android:layout_toEndOf="@+id/listviewPeoplesPicture"
+        android:layout_alignTop="@+id/ImageViewPicture"
+        android:layout_toEndOf="@+id/ImageViewPicture"
         android:gravity="center_vertical"
-        android:layout_alignBottom="@+id/listviewPeoplesPicture" />
-
+        android:layout_alignBottom="@+id/ImageViewPicture" />
 </RelativeLayout>
