--- a/app/src/main/res/layout/listview_people_check.xml
+++ b/app/src/main/res/layout/listview_people_check.xml
@@ -9,7 +9,7 @@
     <ImageView
         android:layout_width="48dp"
         android:layout_height="48dp"
-        android:id="@+id/listviewPeoplesPicture"
+        android:id="@+id/ImageViewPicture"
         android:layout_marginTop="4pt"
         android:layout_marginBottom="4pt"
         android:layout_marginStart="4pt"
@@ -22,15 +22,15 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:id="@+id/listviewPeopleName"
+        android:id="@+id/textViewName"
         android:text="Sample Text"
         android:textColor="#000000"
         android:layout_alignWithParentIfMissing="false"
-        android:layout_alignBottom="@+id/listviewPeoplesPicture"
-        android:layout_alignTop="@+id/listviewPeoplesPicture"
+        android:layout_alignBottom="@+id/ImageViewPicture"
+        android:layout_alignTop="@+id/ImageViewPicture"
         android:textAlignment="center"
         android:gravity="center_vertical"
-        android:layout_toEndOf="@+id/listviewPeoplesPicture"/>
+        android:layout_toEndOf="@+id/ImageViewPicture"/>
 
     <CheckBox
         android:layout_width="wrap_content"
@@ -39,8 +39,8 @@
         android:clickable="false"
         android:id="@+id/isParticipant"
         android:layout_alignParentEnd="true"
-        android:layout_alignBaseline="@+id/listviewPeoplesPicture"
-        android:layout_alignTop="@+id/listviewPeoplesPicture"
-        android:layout_alignBottom="@+id/listviewPeoplesPicture" />
+        android:layout_alignBaseline="@+id/ImageViewPicture"
+        android:layout_alignTop="@+id/ImageViewPicture"
+        android:layout_alignBottom="@+id/ImageViewPicture" />
 
 </RelativeLayout>
