--- a/app/src/main/res/layout/activity_room_creating.xml
+++ b/app/src/main/res/layout/activity_room_creating.xml
@@ -60,7 +60,7 @@
         <ListView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/listViewRooms"
+            android:id="@+id/listViewPeople"
             android:layout_below="@+id/checkBoxIsPrivate"
             android:layout_alignParentStart="true" />
     </RelativeLayout>
