--- a/app/src/main/res/layout/activity_room_creating.xml
+++ b/app/src/main/res/layout/activity_room_creating.xml
@@ -44,7 +44,8 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/editTextRoomName"
                 android:hint="@string/room_name"
-                android:singleLine="true"/>
+                android:singleLine="true"
+                android:maxLength="20" />
 
         </android.support.design.widget.TextInputLayout>
 
