--- a/app/src/main/res/layout/listview_people.xml
+++ b/app/src/main/res/layout/listview_people.xml
@@ -22,9 +22,20 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:id="@+id/textViewName"
+        android:text="Sample text"
         android:textColor="#000000"
         android:layout_alignTop="@+id/ImageViewPicture"
         android:layout_toEndOf="@+id/ImageViewPicture"
         android:gravity="center_vertical"
-        android:layout_alignBottom="@+id/ImageViewPicture" />
+        android:layout_marginTop="10dp"
+        tools:ignore="HardcodedText" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/offline"
+        android:id="@+id/textViewStatus"
+        android:layout_alignBottom="@+id/ImageViewPicture"
+        android:layout_alignStart="@+id/textViewName"
+        android:layout_marginBottom="10dp" />
 </RelativeLayout>
