--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -36,7 +36,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:id="@+id/editTextMessage"
-            android:hint="@string/edit_text_message_typehere"
+            android:hint="@string/type_here"
             android:layout_weight="1"
             android:maxLines="5" />
 
