--- a/app/src/main/res/layout/activity_listview.xml
+++ b/app/src/main/res/layout/activity_listview.xml
@@ -36,7 +36,7 @@
         <ListView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/listViewPeople"
+            android:id="@+id/listView"
             android:layout_alignParentStart="true" />
     </RelativeLayout>
 </android.support.design.widget.CoordinatorLayout>
