--- a/app/src/main/res/layout/fragment_listview.xml
+++ b/app/src/main/res/layout/fragment_listview.xml
@@ -14,5 +14,5 @@
     <ListView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/listViewPeople" />
+        android:id="@+id/listView" />
 </RelativeLayout>
