--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,7 +20,7 @@
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
         android:background="@color/whiteBackground"
-        app:headerLayout="@layout/nav_header_main"
+        app:headerLayout="@layout/nav_header"
         app:menu="@menu/menu_drawer" />
 
 </android.support.v4.widget.DrawerLayout>
