--- a/app/src/main/res/layout/listview_people.xml
+++ b/app/src/main/res/layout/listview_people.xml
@@ -9,12 +9,12 @@
     <ImageView
         android:layout_width="64dp"
         android:layout_height="64dp"
-        android:id="@+id/ImageViewPicture"
+        android:id="@+id/imageViewPicture"
         android:layout_marginTop="4pt"
         android:layout_marginBottom="4pt"
         android:layout_marginStart="4pt"
         android:layout_marginEnd="8pt"
-        android:background="#000000"
+        android:src="@android:drawable/sym_def_app_icon"
         android:contentDescription="@string/profile_picture"/>
 
     <TextView
@@ -24,18 +24,18 @@
         android:id="@+id/textViewName"
         android:text="Sample text"
         android:textColor="#000000"
-        android:layout_alignTop="@+id/ImageViewPicture"
-        android:layout_toEndOf="@+id/ImageViewPicture"
         android:gravity="center_vertical"
-        android:layout_marginTop="10dp"
-        tools:ignore="HardcodedText" />
+        tools:ignore="HardcodedText"
+        android:layout_alignTop="@+id/imageViewPicture"
+        android:layout_toEndOf="@+id/imageViewPicture"
+        android:layout_marginTop="10dp" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/offline"
         android:id="@+id/textViewStatus"
-        android:layout_alignBottom="@+id/ImageViewPicture"
+        android:layout_alignBottom="@+id/imageViewPicture"
         android:layout_alignStart="@+id/textViewName"
         android:layout_marginBottom="10dp" />
 </RelativeLayout>
