--- a/app/src/main/res/layout/listview_room.xml
+++ b/app/src/main/res/layout/listview_room.xml
@@ -14,7 +14,7 @@
         android:layout_marginBottom="4pt"
         android:layout_marginStart="4pt"
         android:layout_marginEnd="8pt"
-        android:background="#000000"
+        android:src="@android:drawable/sym_def_app_icon"
         android:contentDescription="@string/profile_picture"/>
 
     <TextView
